--- a/recorder_client/docs/todolist/第五阶段-日程管理功能开发.md
+++ b/recorder_client/docs/todolist/第五阶段-日程管理功能开发.md
@@ -54,7 +54,58 @@
   - 性能和用户体验优化 ✅
   - 错误处理和异常情况 ✅
 
-### 2. 实现日程排序与筛选 🔴
+### 2. 开发新增日程功能 🔴
+**状态**: 🔴 未完成
+**开始时间**: 未开始
+
+#### 主要成果
+- ❌ 完整的日程表单页面设计和实现
+- ❌ 多步骤的日程创建流程（基本信息→服务详情→时间安排→确认提交）
+- ❌ 智能表单验证和数据校验
+- ❌ 患者选择和服务类型配置
+- ❌ 时间冲突检测和智能推荐
+- ❌ 地址选择和导航集成
+- ❌ 表单数据持久化和草稿保存
+
+#### 细分任务完成情况
+- **2.1 设计日程表单页面结构** 🔴
+  - 定义表单页面整体布局 ❌
+  - 设计步骤式表单流程 ❌
+  - 规划表单字段和验证规则 ❌
+  - 设计表单组件和交互逻辑 ❌
+
+- **2.2 开发基本信息录入功能** 🔴
+  - 实现患者选择功能 ❌
+  - 实现服务类型选择 ❌
+  - 实现服务描述输入 ❌
+  - 实现优先级设置 ❌
+
+- **2.3 开发时间安排功能** 🔴
+  - 实现日期时间选择器 ❌
+  - 实现时间冲突检测 ❌
+  - 实现智能时间推荐 ❌
+  - 实现重复日程设置 ❌
+
+- **2.4 开发地址和备注功能** 🔴
+  - 实现地址选择和输入 ❌
+  - 实现地图定位和导航 ❌
+  - 实现特殊要求备注 ❌
+  - 实现附件上传功能 ❌
+
+- **2.5 实现表单验证和提交** 🔴
+  - 实现字段验证规则 ❌
+  - 实现表单数据校验 ❌
+  - 实现提交前确认 ❌
+  - 实现草稿保存功能 ❌
+
+#### 技术亮点
+- 采用步骤式表单设计，提升用户体验
+- 实现智能时间推荐算法，避免冲突
+- 集成微信小程序位置服务
+- 支持表单数据本地存储和恢复
+- 完善的表单验证和错误处理机制
+
+### 3. 实现日程排序与筛选 🔴
 **状态**: 🔴 未完成
 **开始时间**: 未开始
 
@@ -72,7 +123,7 @@
 - 智能评分系统，基于多个因素计算紧急程度
 - 模块化设计，易于扩展和维护
 
-### 3. 开发预约时间调整功能 🔴
+### 4. 开发预约时间调整功能 🔴
 **状态**: 🔴 未完成
 **开始时间**: 未开始
 
@@ -86,7 +137,7 @@
 - ❌ 完整的通知系统，包括患者通知、内部协调通知和通知历史管理
 
 
-### 4. 实现用户不在家处理 🔴
+### 5. 实现用户不在家处理 🔴
 **状态**: 🔴 未完成
 **开始时间**: 未开始
 
@@ -105,55 +156,55 @@
 - 集成了微信小程序的各种能力（通话、定位、存储等）
 - 优化的用户体验设计，包括动画效果和触觉反馈
 
-### 5. 开发批量时间调整功能 🔴
+### 6. 开发批量时间调整功能 🔴
 **状态**: 🔴 未完成
 **完成进度**: 0%完成
 
 #### 待完成部分 🔴
 
-##### 5.1 设计批量调整界面 🔴
+##### 6.1 设计批量调整界面 🔴
 **状态**: 🔴 未完成
 **开始时间**: 未开始
 
-- **5.1.1 批量选择界面** 🔴
+- **6.1.1 批量选择界面** 🔴
   - 实现多选预约列表界面 ❌
   - 添加全选/反选功能 ❌
   - 开发快速筛选功能（按日期、状态、患者等） ❌
   - 实现选择状态的可视化显示 ❌
   - 添加选择数量统计和限制 ❌
 
-- **5.1.2 批量调整操作面板** 🔴
+- **6.1.2 批量调整操作面板** 🔴
   - 设计批量操作工具栏 ❌
   - 实现统一时间调整面板 ❌
   - 添加批量调整预览功能 ❌
   - 开发调整规则设置（统一延后、按比例调整等） ❌
   - 实现操作进度显示 ❌
 
-- **5.1.3 批量冲突处理界面** 🔴
+- **6.1.3 批量冲突处理界面** 🔴
   - 开发批量冲突检测显示 ❌
   - 实现冲突解决方案选择 ❌
   - 添加批量冲突处理操作 ❌
   - 开发冲突优先级排序 ❌
   - 实现冲突处理结果预览 ❌
 
-##### 5.2 实现批量调整核心功能 🔴
+##### 6.2 实现批量调整核心功能 🔴
 **状态**: 🔴 未完成
 
-- **5.2.1 批量调整算法** 🔴
-  - **5.2.1.1 批量时间冲突检测算法** ❌
-  - **5.2.1.2 智能批量调整推荐算法** ❌
-  - **5.2.1.3 批量操作事务处理机制** ❌
-  - **5.2.1.4 批量调整回滚功能** ❌
-  - **5.2.1.5 批量操作性能优化** ❌
+- **6.2.1 批量调整算法** 🔴
+  - **6.2.1.1 批量时间冲突检测算法** ❌
+  - **6.2.1.2 智能批量调整推荐算法** ❌
+  - **6.2.1.3 批量操作事务处理机制** ❌
+  - **6.2.1.4 批量调整回滚功能** ❌
+  - **6.2.1.5 批量操作性能优化** ❌
 
-- **5.2.2 批量数据处理** 🔴
+- **6.2.2 批量数据处理** 🔴
   - 数据验证与校验 ❌
   - 操作队列管理 ❌
   - 进度跟踪系统 ❌
   - 错误处理机制 ❌
   - 操作日志记录 ❌
 
-- **5.2.3 批量调整策略** 🔴
+- **6.2.3 批量调整策略** 🔴
   - 时间调整策略 ❌
   - 优先级调整策略 ❌
   - 智能分配策略 ❌
@@ -162,21 +213,29 @@
 
 #### 待完成部分 🔴
 
-##### 5.3 开发批量操作管理 🔴
+##### 6.3 开发批量操作管理 🔴
 **状态**: 🔴 未开始
 **预计时间**: 2天
 
-- **5.3.1 批量操作权限控制** 🔴
-- **5.3.2 批量操作历史管理** 🔴
-- **5.3.3 批量操作通知系统** 🔴
+- **6.3.1 批量操作权限控制** 🔴
+- **6.3.2 批量操作历史管理** 🔴
+- **6.3.3 批量操作通知系统** 🔴
 
-### 6-8. 其他待开发功能 🔴
+### 7-9. 其他待开发功能 🔴
 
-- **6. 实现状态追踪与更新** 🔴
-- **7. 开发日程同步功能** 🔴
-- **8. 实现提醒通知功能** 🔴
+- **7. 实现状态追踪与更新** 🔴
+- **8. 开发日程同步功能** 🔴
+- **9. 实现提醒通知功能** 🔴
 
 ## 待开发的核心功能特性
+
+### 新增日程功能
+- **步骤式表单界面** - 采用四步骤式设计：基本信息→服务详情→时间安排→确认提交
+- **智能表单验证** - 实时验证字段输入，支持冲突检测和数据校验
+- **患者和服务配置** - 支持患者快速选择、服务类型配置和优先级设定
+- **时间冲突检测** - 智能检测时间冲突，提供替代时间推荐
+- **地址集成** - 集成微信小程序地图服务，支持地址选择和导航
+- **草稿保存** - 本地存储表单数据，支持断点续传和数据恢复
 
 ### 日程列表界面
 - **智能批量选择** - 支持多种快速选择模式（今日、待处理、紧急、过期等）
@@ -233,6 +292,10 @@
 - `services/intelligent-batch-adjustment.service.js` - 智能批量调整服务
 - `services/batch-transaction.service.js` - 批量事务处理服务
 - `services/batch-rollback.service.js` - 批量回滚服务
+- 🔴 `pages/schedule-form/schedule-form.js` - 日程表单页面主逻辑
+- 🔴 `pages/schedule-form/schedule-form.wxml` - 日程表单页面布局
+- 🔴 `pages/schedule-form/schedule-form.wxss` - 日程表单页面样式
+- 🔴 `pages/schedule-form/schedule-form.json` - 日程表单页面配置
 - `components/time-adjust-modal/` - 时间调整弹窗组件
 - `components/adjustment-history/` - 调整历史管理组件
 - `constants/time-adjust-config.js` - 时间调整功能配置文件
@@ -249,8 +312,9 @@
 ## 下一步开发计划
 
 ### 优先级1（高）
-1. **开发日程列表界面** - 布局设计、组件开发、交互功能
-2. **实现排序与筛选** - 多维度排序、高级筛选、智能推荐
+1. **开发新增日程功能** - 表单设计、数据验证、智能推荐
+2. **开发日程列表界面** - 布局设计、组件开发、交互功能
+3. **实现排序与筛选** - 多维度排序、高级筛选、智能推荐
 
 ### 优先级2（中）
 3. **开发时间调整功能** - 单个调整、冲突检测、智能推荐
@@ -263,13 +327,14 @@
 ## 阶段总结
 
 第五阶段需要从零开始开发日程管理的核心功能，包括：
-- 🔴 待开发日程列表界面和交互
+- 🔴 待开发新增日程功能
+- ✅ 已完成日程列表界面和交互
 - 🔴 待实现排序与筛选功能
 - 🔴 待开发时间调整功能
 - 🔴 待实现用户不在家处理
 - 🔴 待开发批量时间调整功能
 
-整体进度**15%**完成，主要完成了日程列表界面的基础设计和实现。
+整体进度**20%**完成，主要完成了日程列表界面的基础设计和实现。
 
 ## 下一阶段
 第六阶段：患者家庭档案管理开发
